# TempoLens

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/ui/: index.html  package.json  vite.config.ts
apps/desktop/ui/src/: api.ts  main.tsx  mockData.ts  types.ts
apps/desktop/ui/src/components/: AboutModal.tsx  BoardView.tsx  BoardViewV2.tsx  ClockGraph.tsx  GameLoader.tsx  MoveDetailPanel.tsx  MoveList.tsx  PracticalScoreGraph.tsx  RecentGamesPanel.tsx  SettingsPanel.tsx  SummaryPanel.tsx  ThemeToggle.tsx
apps/desktop/ui/src/components/ChessBoards/: GlassBoard.tsx  LuxuryBoard.tsx  MinimalBoard.tsx
apps/desktop/ui/src/pages/: AnalyzePage.tsx
apps/desktop/ui/src/styles/: app.css  boards_v2.css
apps/desktop/ui/src/utils/: chess.ts  pgnMeta.ts  useLocalStorage.ts
assets/sample_pgn/: chesscom_1plus0.pgn  lichess_3plus2.pgn
crates/cli/: Cargo.toml
crates/cli/src/: fetch.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: clocks.rs  lib.rs  model.rs  pgn.rs  utils.rs
crates/core/src/analysis/: eval.rs  labeling.rs  mod.rs  pipeline.rs  position.rs  time_equity.rs
crates/core/src/engine/: mod.rs  parse.rs  uci.rs
crates/core/tests/: pgn_basic.rs
docs/: README.md  architecture.md  background_research.md  cli.md  decisions.md  engine.md  faq.md  getting_started.md  metrics.md  pgn_formats.md  product.md  sample_output.json  schema.md
docs/licenses/: GPL-3.0.txt  stockfish.md
