[package]
name = "timelens-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
timelens-core = { path = "../core" }
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
urlencoding = "2"
