[package]
name = "timelens-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "process", "io-util", "macros", "time"] }
regex = "1"
once_cell = "1"
anyhow = "1"

pgn-reader = "0.26"
shakmaty = "0.27"
