[package]
name = "timelens-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1" }

[dependencies]
tauri = { version = "1", features = ["api-all"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
timelens-core = { path = "../../../crates/core" }
